--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "jquery": "^3.6.1",
     "mongodb": "^4.11.0",
+    "mongoose": "^6.7.2",
     "nodemailer": "^6.8.0"
   },
   "devDependencies": {
