--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "geoip-lite": "^1.4.6",
     "jquery": "^3.6.1",
     "mongoose": "^6.7.2",
     "node-fetch": "^3.3.0",
